--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -7,11 +7,15 @@
 
 .username {
   float: right;
-  margin-right: 25px;
+  margin-right: 160px;
+}
+
+.search {
+  width: 140%;
 }
 
 .header__console div {
-  padding: 0 300px;
+  padding: 5px 10vw;
   margin: 6px 0;
 }
 
@@ -35,7 +39,7 @@ a {
   border: 1px solid black;
   background-color: #3951c6;
   color: #fff;
-  padding: 0 300px;
+  padding: 5px 10vw;
 }
 
 .header__container div {
@@ -45,7 +49,8 @@ a {
 .header__container-nav {
   display: flex;
   justify-content: space-around;
-  width: 100%;
+  width: 55%;
+  padding: 5px 5vw;
 }
 
 .header__nav-item {
