updated topic code

--- a/src/Components/Forum/Forum.css
+++ b/src/Components/Forum/Forum.css
@@ -170,6 +170,10 @@ tr:nth-child(odd) {
   margin-top: 10px;
 }
 
+.forum__topic-new-post textarea {
+  width: 50%;
+}
+
 .forum__topic-new-post input {
   margin-left: 0;
 }
